Modify name of file to game.js and create script.js file and add startGame() function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Rock Paper Scissors</title>
 </head>
 <body>
-
-  <script src="./script.js"></script>
+  <button id="start">START GAME</button>
+  <div id="options"></div>
+  <script type="module" src="./script.js"></script>
 </body>
 </html>
