Add 3 buttons that play round every time you click them

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>Rock Paper Scissors</title>
 </head>
 <body>
-  <button id="start">START GAME</button>
-  <div id="options"></div>
+  <button value="rock" type="button">ROCK</button>
+  <button value="paper" type="button">PAPER</button>
+  <button value="scissors" type="button">SCISSORS</button>
   <script type="module" src="./script.js"></script>
 </body>
 </html>
