Refactor showRoundWinner to update an element which is the scoreboard to updateScoreboard

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <button value="rock" type="button">ROCK</button>
   <button value="paper" type="button">PAPER</button>
   <button value="scissors" type="button">SCISSORS</button>
+  <div id="scoreboard">
+    <h1>Score: 0-0</h1>
+  </div>
   <script type="module" src="./script.js"></script>
 </body>
 </html>
