Replace buttons for images

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <title>Rock Paper Scissors</title>
 </head>
 <body>
-  <button value="rock" type="button">ROCK</button>
-  <button value="paper" type="button">PAPER</button>
-  <button value="scissors" type="button">SCISSORS</button>
-  <div id="scoreboard">
+  <div class="scoreboard" id="scoreboard">
     <h1>Score: 0-0</h1>
   </div>
+  <div class="options">
+    <img src="./assets/rock.png" alt="Rock">
+    <img src="./assets/paper.png" alt="Paper">
+    <img src="./assets/scissors.png" alt="Scissors">
+  </div>
+
   <script type="module" src="./script.js"></script>
 </body>
 </html>
