Style the website and make it responsive

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1>Score: 0-0</h1>
   </div>
   <div class="options">
-    <img src="./assets/rock.png" alt="Rock">
-    <img src="./assets/paper.png" alt="Paper">
-    <img src="./assets/scissors.png" alt="Scissors">
+    <img class="option" src="./assets/rock.png" alt="Rock">
+    <img class="option" src="./assets/paper.png" alt="Paper">
+    <img class="option" src="./assets/scissors.png" alt="Scissors">
   </div>
 
   <script type="module" src="./script.js"></script>
