Add a round winner message every round

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <img class="option" src="./assets/paper.png" alt="Paper">
     <img class="option" src="./assets/scissors.png" alt="Scissors">
   </div>
+  <div class="round-info">
+    <h3 id="round-info"></h3>
+  </div>
 
   <script type="module" src="./script.js"></script>
 </body>
