--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
   <title>Rock Paper Scissors</title>
 </head>
 <body>
-  <div class="scoreboard" id="scoreboard">
-    <h1>Score: 0-0</h1>
+  <div class="round-info">
+    <h1 id="round-score">Score: 0-0</h1>
+    <h3 id="round-winner"></h3>
   </div>
   <div class="options">
     <img class="option" src="./assets/rock.png" alt="Rock">
     <img class="option" src="./assets/paper.png" alt="Paper">
     <img class="option" src="./assets/scissors.png" alt="Scissors">
-  </div>
-  <div class="round-info">
-    <h3 id="round-info"></h3>
   </div>
 
   <script type="module" src="./script.js"></script>
