Add scoreboard to keep up with all games

--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
     <img class="option" src="./assets/scissors.png" alt="Scissors">
   </div>
 
+  <div id="scoreboard" class="scoreboard">
+    <div class="scoreboard-item">
+      <p>SCOREBOARD</p>
+    </div>
+    <div class="scoreboard-item">
+      <p>PLAYER</p>
+    </div>
+    <div class="scoreboard-item">
+      <p>COMPUTER</p>
+    </div>
+  </div>
+
   <script type="module" src="./script.js"></script>
 </body>
 </html>
