Change way to create elements to the scoreboard

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
     <div class="scoreboard-item">
       <p>COMPUTER</p>
     </div>
+    <div id="games-won" class="scoreboard-item">
+      <p>GAMES WON</p>
+    </div>
+    <div class="scoreboard-item">
+      <p>0</p>
+    </div>
+    <div class="scoreboard-item">
+      <p>0</p>
+    </div>
   </div>
 
   <script type="module" src="./script.js"></script>
